--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,4 +1,13 @@
 [production]
+resources.db.adapter = "Pdo_Mysql";
+resources.db.params.host = "localhost"
+resources.db.params.username = "root"
+resources.db.params.password = "ins$piron"
+resources.db.params.dbname = "gestaodeprojetov1"
+resources.db.params.charset = "utf8"
+
+
+
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 includePaths.library = APPLICATION_PATH "/../library"
