Versão 1 - 10/10/2013 - 14:18 Busca - Alteração - Buscando

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,5 +1,5 @@
 [production]
-resources.db.adapter = "Pdo_Mysql";
+resources.db.adapter = "PDO_MYSQL";
 resources.db.params.host = "localhost"
 resources.db.params.username = "root"
 resources.db.params.password = "ins$piron"
