--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -28,6 +28,12 @@ resources.router.routes.acompanhar.defaults.controller = index
 resources.router.routes.acompanhar.defaults.action = acompanhar
 
 
+resources.router.routes.relatorio.route = /relatorios
+resources.router.routes.relatorio.defaults.module = default
+resources.router.routes.relatorio.defaults.controller = index
+resources.router.routes.relatorio.defaults.action = relatorio
+
+
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 includePaths.library = APPLICATION_PATH "/../library"
